# studyC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.c  studyC.code-workspace
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  bignumCalc.c
src/Baekjoon/: CMakeLists.txt
src/Baekjoon/01_IO_n_OPNS/: CMakeLists.txt
src/Baekjoon/01_IO_n_OPNS/Project_010/: multi33.c
src/Baekjoon/01_IO_n_OPNS/Project_013/: CMakeLists.txt
src/Baekjoon/02_conditionalState/: CMakeLists.txt
src/Baekjoon/02_conditionalState/Project_014/: compareTwoNum.c
src/Baekjoon/02_conditionalState/Project_015/: grade.c
src/Baekjoon/02_conditionalState/Project_016/: leapYear.c
src/Baekjoon/03_loop/: CMakeLists.txt
src/Baekjoon/03_loop/Project_021/: mulTable.c
src/Baekjoon/03_loop/Project_022/: sumLoop.c
src/Baekjoon/03_loop/Project_023/: sum1toN.c
src/Baekjoon/03_loop/Project_024/: compareSum.c
src/Baekjoon/03_loop/Project_025/: repeatedOutput.c
src/Baekjoon/03_loop/Project_026/: sumLoop.c
src/Baekjoon/03_loop/Project_027/: sumLoop2.c
src/Baekjoon/03_loop/Project_028/: sumLoop3.c
src/Baekjoon/03_loop/Project_029/: nestedLoop.c
src/Baekjoon/03_loop/Project_030/: nestedLoop2.c
src/Baekjoon/03_loop/Project_031/: sumUntil00.c
src/Baekjoon/04_Array/: CMakeLists.txt
src/Baekjoon/04_Array/Project_033/: compareNcount.c  projectN.c
src/Baekjoon/04_Array/Project_034/: listSmallThanN.c
src/Baekjoon/04_Array/Project_035/: searchMinMax.c
src/Baekjoon/04_Array/Project_036/: maxOrder.c
src/Baekjoon/04_Array/Project_037/: replaceArrElement.c
src/Baekjoon/04_Array/Project_038/: exchangeArrElement.c
src/Baekjoon/04_Array/Project_039/: sortNsearch.c
src/Baekjoon/04_Array/Project_040/: searchDupe.c
src/Baekjoon/04_Array/Project_041/: revArrElemnet.c
src/Baekjoon/04_Array/Project_042/: arrAverage.c
src/Baekjoon/05_string/: CMakeLists.txt
src/Baekjoon/06_/: CMakeLists.txt
src/Baekjoon/07_/: CMakeLists.txt
src/Baekjoon/08_/: CMakeLists.txt
src/Baekjoon/09_/: CMakeLists.txt
src/Baekjoon/10_/: CMakeLists.txt
src/Baekjoon/11_/: CMakeLists.txt
src/Baekjoon/12_/: CMakeLists.txt
src/Baekjoon/13_/: CMakeLists.txt
src/Baekjoon/14_/: CMakeLists.txt
src/Baekjoon/15_/: CMakeLists.txt
src/Baekjoon/16_/: CMakeLists.txt
src/Baekjoon/17_/: CMakeLists.txt
src/Baekjoon/18_/: CMakeLists.txt
src/Baekjoon/19_/: CMakeLists.txt
src/Baekjoon/1_IO_n_OPNS/Project11/: littleJeongmin.c
src/Baekjoon/1_IO_n_OPNS/Project12/: catEscape.c
src/Baekjoon/1_IO_n_OPNS/Project13/: dogEscape.c
src/Baekjoon/20_/: CMakeLists.txt
src/Baekjoon/21_/: CMakeLists.txt
src/Baekjoon/22_/: CMakeLists.txt
src/Baekjoon/23_/: CMakeLists.txt
src/Baekjoon/24_/: CMakeLists.txt
src/Baekjoon/25_/: CMakeLists.txt
src/Baekjoon/26_/: CMakeLists.txt
src/Baekjoon/27_/: CMakeLists.txt
src/Baekjoon/28_/: CMakeLists.txt
src/Baekjoon/29_/: CMakeLists.txt
src/Baekjoon/2_conditionalState/Project17/: selQuadrant.c
src/Baekjoon/2_conditionalState/Project18/: calcTime.c
src/Baekjoon/2_conditionalState/Project19/: calcTime2.c
src/Baekjoon/2_conditionalState/Project20/: checkDupe.c
src/Baekjoon/30_/: CMakeLists.txt
src/Baekjoon/31_/: CMakeLists.txt
src/Baekjoon/32_/: CMakeLists.txt
src/Baekjoon/33_/: CMakeLists.txt
src/Baekjoon/34_/: CMakeLists.txt
src/Baekjoon/35_/: CMakeLists.txt
src/Baekjoon/36_/: CMakeLists.txt
src/Baekjoon/37_/: CMakeLists.txt
src/Baekjoon/38_/: CMakeLists.txt
src/Baekjoon/39_/: CMakeLists.txt
src/Baekjoon/40_/: CMakeLists.txt
src/Baekjoon/41_/: CMakeLists.txt
src/Baekjoon/42_/: CMakeLists.txt
src/Baekjoon/43_/: CMakeLists.txt
src/Baekjoon/44_/: CMakeLists.txt
src/Baekjoon/45_/: CMakeLists.txt
src/Baekjoon/46_/: CMakeLists.txt
src/Baekjoon/47_/: CMakeLists.txt
src/Baekjoon/48_/: CMakeLists.txt
src/Baekjoon/48_/Project_343/: projectN.c
src/Baekjoon/49_/: CMakeLists.txt
src/Baekjoon/50_/: CMakeLists.txt
src/Baekjoon/51_/: CMakeLists.txt
src/Baekjoon/52_/: CMakeLists.txt
src/Baekjoon/53_/: CMakeLists.txt
src/Baekjoon/54_/: CMakeLists.txt
src/Baekjoon/55_/: CMakeLists.txt
src/Baekjoon/56_/: CMakeLists.txt
src/Baekjoon/57_/: CMakeLists.txt
src/Baekjoon/Project11/: sum3num.c
src/Project/: projectN.c
