enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

add_subdirectory(01_IO_n_OPNS)
#add_subdirectory(02_conditionalState)
#add_subdirectory(03_loop)
#add_subdirectory(04_Array)
#add_subdirectory(05_)
#add_subdirectory(06_)
#add_subdirectory(07_)
#add_subdirectory(08_)
#add_subdirectory(09_)
#add_subdirectory(10_)
#add_subdirectory(11_)
#add_subdirectory(12_)
#add_subdirectory(13_)
#add_subdirectory(14_)
#add_subdirectory(15_)
#add_subdirectory(16_)
#add_subdirectory(17_)
#add_subdirectory(18_)
#add_subdirectory(19_)
#add_subdirectory(20_)
#add_subdirectory(21_)
#add_subdirectory(22_)
#add_subdirectory(23_)
#add_subdirectory(24_)
#add_subdirectory(25_)
#add_subdirectory(26_)
#add_subdirectory(27_)
#add_subdirectory(28_)
#add_subdirectory(29_)
#add_subdirectory(30_)
#add_subdirectory(31_)
#add_subdirectory(32_)
#add_subdirectory(33_)
#add_subdirectory(34_)
#add_subdirectory(35_)
#add_subdirectory(36_)
#add_subdirectory(37_)
#add_subdirectory(38_)
#add_subdirectory(39_)
#add_subdirectory(40_)
#add_subdirectory(41_)
#add_subdirectory(42_)
#add_subdirectory(43_)
#add_subdirectory(44_)
#add_subdirectory(45_)
#add_subdirectory(46_)
#add_subdirectory(47_)
#add_subdirectory(48_)
#add_subdirectory(49_)
#add_subdirectory(50_)
#add_subdirectory(51_)
#add_subdirectory(52_)
#add_subdirectory(53_)
#add_subdirectory(54_)
#add_subdirectory(55_)
#add_subdirectory(56_)
#add_subdirectory(57_)