enable_testing()

#file(GLOB PROJECT__SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT__SRC}
#    )

#add_subdirectory(Project_01)
#add_subdirectory(Project_02)
#add_subdirectory(Project_03)
#add_subdirectory(Project_04)
#add_subdirectory(Project_05)
#add_subdirectory(Project_06)
#add_subdirectory(Project_07)
#add_subdirectory(Project_08)
#add_subdirectory(Project_09)
#add_subdirectory(Project_010)
#add_subdirectory(Project_011)
#add_subdirectory(Project_012)
add_subdirectory(Project_013)