enable_testing()

#file(GLOB PROJECT__SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT__SRC}
#    )

#add_subdirectory(Project_14)
#add_subdirectory(Project_15)
#add_subdirectory(Project_16)
#add_subdirectory(Project_17)
#add_subdirectory(Project_18)
#add_subdirectory(Project_19)
#add_subdirectory(Project_20)