enable_testing()

#file(GLOB PROJECT__SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT__SRC}
#    )

#add_subdirectory(Project_21)
#add_subdirectory(Project_22)
#add_subdirectory(Project_23)
#add_subdirectory(Project_24)
#add_subdirectory(Project_25)
#add_subdirectory(Project_26)
#add_subdirectory(Project_27)
#add_subdirectory(Project_28)
#add_subdirectory(Project_29)
#add_subdirectory(Project_30)
#add_subdirectory(Project_31)
#add_subdirectory(Project_32)