enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_033)
#add_subdirectory(Project_034)
#add_subdirectory(Project_035)
#add_subdirectory(Project_036)
#add_subdirectory(Project_037)
#add_subdirectory(Project_038)
#add_subdirectory(Project_039)
#add_subdirectory(Project_040)
#add_subdirectory(Project_041)
#add_subdirectory(Project_042)