enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_043)
#add_subdirectory(Project_044)
#add_subdirectory(Project_045)
#add_subdirectory(Project_046)
#add_subdirectory(Project_047)
#add_subdirectory(Project_048)
#add_subdirectory(Project_049)
#add_subdirectory(Project_050)
#add_subdirectory(Project_051)
#add_subdirectory(Project_052)
#add_subdirectory(Project_053)