enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_054)
#add_subdirectory(Project_055)
#add_subdirectory(Project_056)
#add_subdirectory(Project_057)
#add_subdirectory(Project_058)
#add_subdirectory(Project_059)
#add_subdirectory(Project_060)
#add_subdirectory(Project_061)