enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_066)
#add_subdirectory(Project_067)
#add_subdirectory(Project_068)
#add_subdirectory(Project_069)
#add_subdirectory(Project_070)
#add_subdirectory(Project_071)
#add_subdirectory(Project_072)