enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_079)
#add_subdirectory(Project_080)
#add_subdirectory(Project_081)
#add_subdirectory(Project_082)
#add_subdirectory(Project_083)
#add_subdirectory(Project_084)
#add_subdirectory(Project_085)
#add_subdirectory(Project_086)