enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_087)
#add_subdirectory(Project_088)
#add_subdirectory(Project_089)
#add_subdirectory(Project_090)
#add_subdirectory(Project_091)
#add_subdirectory(Project_092)
#add_subdirectory(Project_093)