enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_100)
#add_subdirectory(Project_101)
#add_subdirectory(Project_102)
#add_subdirectory(Project_103)
#add_subdirectory(Project_104)
#add_subdirectory(Project_105)
#add_subdirectory(Project_106)
#add_subdirectory(Project_107)
#add_subdirectory(Project_108)
#add_subdirectory(Project_109)
#add_subdirectory(Project_110)