enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_111)
#add_subdirectory(Project_112)
#add_subdirectory(Project_113)
#add_subdirectory(Project_114)
#add_subdirectory(Project_115)
#add_subdirectory(Project_116)
#add_subdirectory(Project_117)
#add_subdirectory(Project_118)