enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_119)
#add_subdirectory(Project_120)
#add_subdirectory(Project_121)
#add_subdirectory(Project_122)
#add_subdirectory(Project_123)
#add_subdirectory(Project_124)
#add_subdirectory(Project_125)
#add_subdirectory(Project_126)
#add_subdirectory(Project_127)