enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_128)
#add_subdirectory(Project_129)
#add_subdirectory(Project_130)
#add_subdirectory(Project_131)
#add_subdirectory(Project_132)
#add_subdirectory(Project_133)
#add_subdirectory(Project_134)
#add_subdirectory(Project_135)
#add_subdirectory(Project_136)
#add_subdirectory(Project_137)
#add_subdirectory(Project_138)