enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_150)
#add_subdirectory(Project_151)
#add_subdirectory(Project_152)
#add_subdirectory(Project_153)
#add_subdirectory(Project_154)
#add_subdirectory(Project_155)
#add_subdirectory(Project_156)