enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_157)
#add_subdirectory(Project_158)
#add_subdirectory(Project_159)
#add_subdirectory(Project_160)
#add_subdirectory(Project_161)
#add_subdirectory(Project_162)
#add_subdirectory(Project_163)
#add_subdirectory(Project_164)