enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_165)
#add_subdirectory(Project_166)
#add_subdirectory(Project_167)
#add_subdirectory(Project_168)
#add_subdirectory(Project_169)
#add_subdirectory(Project_170)
#add_subdirectory(Project_171)
#add_subdirectory(Project_172)
#add_subdirectory(Project_173)
#add_subdirectory(Project_174)
#add_subdirectory(Project_175)
#add_subdirectory(Project_176)
#add_subdirectory(Project_177)
#add_subdirectory(Project_178)
#add_subdirectory(Project_179)
#add_subdirectory(Project_180)