enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_192)
#add_subdirectory(Project_193)
#add_subdirectory(Project_194)
#add_subdirectory(Project_195)
#add_subdirectory(Project_196)
#add_subdirectory(Project_197)
#add_subdirectory(Project_198)
#add_subdirectory(Project_199)
#add_subdirectory(Project_200)