enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_201)
#add_subdirectory(Project_202)
#add_subdirectory(Project_203)
#add_subdirectory(Project_204)
#add_subdirectory(Project_205)
#add_subdirectory(Project_206)
#add_subdirectory(Project_207)