enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_222)
#add_subdirectory(Project_223)
#add_subdirectory(Project_224)
#add_subdirectory(Project_225)
#add_subdirectory(Project_226)
#add_subdirectory(Project_227)
#add_subdirectory(Project_228)
#add_subdirectory(Project_229)
#add_subdirectory(Project_230)
#add_subdirectory(Project_231)
#add_subdirectory(Project_232)
#add_subdirectory(Project_233)
#add_subdirectory(Project_234)
#add_subdirectory(Project_235)
#add_subdirectory(Project_236)
#add_subdirectory(Project_237)