enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_238)
#add_subdirectory(Project_239)
#add_subdirectory(Project_240)
#add_subdirectory(Project_241)
#add_subdirectory(Project_242)
#add_subdirectory(Project_243)
#add_subdirectory(Project_244)