enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_250)
#add_subdirectory(Project_251)
#add_subdirectory(Project_252)
#add_subdirectory(Project_253)
#add_subdirectory(Project_254)
#add_subdirectory(Project_255)
#add_subdirectory(Project_256)
#add_subdirectory(Project_257)
#add_subdirectory(Project_258)