enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_259)
#add_subdirectory(Project_260)
#add_subdirectory(Project_261)
#add_subdirectory(Project_262)
#add_subdirectory(Project_263)
#add_subdirectory(Project_264)
#add_subdirectory(Project_265)