enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_280)
#add_subdirectory(Project_281)
#add_subdirectory(Project_282)
#add_subdirectory(Project_283)
#add_subdirectory(Project_284)
#add_subdirectory(Project_285)
#add_subdirectory(Project_286)
#add_subdirectory(Project_287)
#add_subdirectory(Project_288)