enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_308)
#add_subdirectory(Project_309)
#add_subdirectory(Project_310)
#add_subdirectory(Project_311)
#add_subdirectory(Project_312)
#add_subdirectory(Project_313)
#add_subdirectory(Project_314)
#add_subdirectory(Project_315)