enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_316)
#add_subdirectory(Project_317)
#add_subdirectory(Project_318)
#add_subdirectory(Project_319)
#add_subdirectory(Project_320)
#add_subdirectory(Project_321)
#add_subdirectory(Project_322)
#add_subdirectory(Project_323)