enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_330)
#add_subdirectory(Project_331)
#add_subdirectory(Project_332)
#add_subdirectory(Project_333)
#add_subdirectory(Project_334)
#add_subdirectory(Project_335)
#add_subdirectory(Project_336)
#add_subdirectory(Project_337)
#add_subdirectory(Project_338)
#add_subdirectory(Project_339)