enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_351)
#add_subdirectory(Project_352)
#add_subdirectory(Project_353)
#add_subdirectory(Project_354)
#add_subdirectory(Project_355)
#add_subdirectory(Project_356)
#add_subdirectory(Project_357)
#add_subdirectory(Project_358)