enable_testing()

#file(GLOB PROJECT_SRC "*.h" "*.c")
#add_executable(codeTest
#    ${PROJECT_SRC}
#    )

#add_subdirectory(Project_363)
#add_subdirectory(Project_364)
#add_subdirectory(Project_365)
#add_subdirectory(Project_366)
#add_subdirectory(Project_367)
#add_subdirectory(Project_368)
#add_subdirectory(Project_369)
#add_subdirectory(Project_370)
#add_subdirectory(Project_371)
#add_subdirectory(Project_372)
#add_subdirectory(Project_373)